(groups): simplify dup chapter name check

--- a/ODK.Web.Razor/appsettings.json
+++ b/ODK.Web.Razor/appsettings.json
@@ -48,6 +48,10 @@
       "ApiKey": ""
     }
   },
+  "Groups": {
+    "DefaultCountryCode": "",
+    "ReservedSlugs": []
+  },
   "Hangfire": {
     "InMemory": false,
     "RetryAttempts": 3,
