--- a/ODK.Data.Core/ODK.Data.Core.csproj
+++ b/ODK.Data.Core/ODK.Data.Core.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\ODK.Core\ODK.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Members\" />
+  </ItemGroup>
+
 </Project>
